--- a/Movies/Views/Home/Directors.cshtml
+++ b/Movies/Views/Home/Directors.cshtml
@@ -7,9 +7,16 @@
 
 <h2>Directors</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+<table class="table">
+    <tr>
+        <th>
+            <p style="text-align:right">
+                @Html.ActionLink("Add New Director", "AddDirector", "Add")
+            </p>
+        </th>
+    </tr>
+</table>
+
 <table class="table">
     <tr>
         <th>
