--- a/Movies/Views/Home/Index.cshtml
+++ b/Movies/Views/Home/Index.cshtml
@@ -9,10 +9,13 @@
     <p class="lead">This is a fancy site about nice movies made by AlexG.</p>
 </div>
 
-<table class="table">
-    <tr>
+<div>
+    <p>
         <b>Recently added movies:</b>
-    </tr>
+    </p>
+</div>
+
+<table class="table">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Title)
@@ -30,7 +33,7 @@
     {
         <tr>
             <td>
-                @Html.ActionLink(item.Title, "Details", new {id = item.Id})
+                @Html.ActionLink(item.Title, "Details", new { id = item.Id })
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.DirectorName.Name)
@@ -43,29 +46,3 @@
 
 </table>
 
-<!--
-    
-
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
-
--->
